--- a/src/css/style.css
+++ b/src/css/style.css
@@ -354,12 +354,12 @@ button:focus {
   border-radius: 10px;
   padding: 1.25rem;
   width: 100%;
-  max-width: 720px;
+  max-width: 600px;
   position: relative;
   box-shadow: 0 6px 30px rgba(0, 0, 0, 0.18);
   display: grid;
-  grid-template-columns: 160px 1fr;
-  gap: 1rem;
+  grid-template-columns:  1fr .7fr;
+  gap: 1.5rem;
   max-height: 85vh;
   overflow-y: auto;
 }
